Use version 20120621 of mpicbg in all pom.xml files
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>mpicbg</groupId>
 			<artifactId>mpicbg</artifactId>
-			<version>${imagej.version}</version>
+			<version>20120621</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
