--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>TrakEM2_</artifactId>
-			<version>${imagej.version}</version>
+			<version>${trakem2.version}</version>
 		</dependency>
 	</dependencies>
 
