Use imglib2.version property for imglib2 deps
Previously, the imglib2.version property may have seemed gratuitous,
since ImageJ2 and ImgLib2 were being versioned together. But we realized
the folly of this approach, and the version numbers will soon be
diverging to give us more flexibility. So imglib2 dependencies must use
the correct property now.

--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,12 @@
 		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2-ij</artifactId>
-			<version>${imagej.version}</version>
+			<version>${imglib2.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2</artifactId>
-			<version>${imagej.version}</version>
+			<version>${imglib2.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>mpicbg</groupId>
