--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 		</dependency>
 	</dependencies>
 
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>http://jenkins.imagej.net/job/blockmatching/</url>
+	</ciManagement>
+
 	<scm>
 		<connection>scm:git:git://github.com/fiji/blockmatching</connection>
 		<developerConnection>scm:git:git@github.com:fiji/blockmatching</developerConnection>
