--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 
 	<parent>
 		<groupId>sc.fiji</groupId>
-		<artifactId>pom-fiji</artifactId>
-		<version>2.0.0-beta-0</version>
+		<artifactId>pom-trakem2</artifactId>
+		<version>1.0-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
