--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 	<parent>
 		<groupId>sc.fiji</groupId>
 		<artifactId>pom-trakem2</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.1.1</version>
 		<relativePath />
 	</parent>
 
 	<artifactId>blockmatching_</artifactId>
-	<version>2.0.1-SNAPSHOT</version>
+	<version>2.0.2</version>
 
 	<name>plugins/blockmatching_.jar</name>
 	<description></description>
