--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<groupId>sc.fiji</groupId>
 		<artifactId>pom-trakem2</artifactId>
 		<relativePath />
-		<version>1.3.2</version>
+		<version>1.3.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>blockmatching_</artifactId>
-	<version>2.1.1</version>
+	<version>2.1.2-SNAPSHOT</version>
 
 	<name>plugins/blockmatching_.jar</name>
 	<description></description>
