--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<groupId>sc.fiji</groupId>
 		<artifactId>pom-trakem2</artifactId>
 		<relativePath />
-		<version>1.3.3-SNAPSHOT</version>
+		<version>1.3.2</version>
 	</parent>
 
 	<artifactId>blockmatching_</artifactId>
