--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
 
 	<parent>
 		<groupId>sc.fiji</groupId>
-		<artifactId>pom-trakem2</artifactId>
+		<artifactId>pom-fiji</artifactId>
+		<version>18.1.0</version>
 		<relativePath />
-		<version>1.3.2</version>
 	</parent>
 
 	<artifactId>blockmatching_</artifactId>
@@ -19,15 +19,19 @@
 	<description></description>
 
 	<scm>
-		<connection>scm:git:git://github.com/trakem2/blockmatching</connection>
-		<developerConnection>scm:git:git@github.com:trakem2/blockmatching</developerConnection>
+		<connection>scm:git:git://github.com/fiji/blockmatching</connection>
+		<developerConnection>scm:git:git@github.com:fiji/blockmatching</developerConnection>
 		<tag>HEAD</tag>
-		<url>https://github.com/trakem2/blockmatching</url>
+		<url>https://github.com/fiji/blockmatching</url>
 	</scm>
 	<ciManagement>
 		<system>Jenkins</system>
 		<url>http://jenkins.imagej.net/job/blockmatching/</url>
 	</ciManagement>
+
+	<properties>
+		<scijava.jvm.version>1.7</scijava.jvm.version>
+	</properties>
 
 	<repositories>
 		<!-- NB: for project parent -->
@@ -37,14 +41,28 @@
 		</repository>
 	</repositories>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>sc.fiji</groupId>
+				<artifactId>pom-trakem2</artifactId>
+				<version>${pom-trakem2.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<!-- TrakEM2 dependencies -->
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>TrakEM2_</artifactId>
+		</dependency>
 
 		<!-- Fiji dependencies -->
 		<dependency>
 			<groupId>mpicbg</groupId>
 			<artifactId>mpicbg</artifactId>
-			<version>1.0.1</version>
 		</dependency>
 
 		<!-- ImageJ dependencies -->
@@ -62,10 +80,5 @@
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2-ij</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>sc.fiji</groupId>
-			<artifactId>TrakEM2_</artifactId>
-		</dependency>
 	</dependencies>
-
 </project>
