--- a/pom.xml
+++ b/pom.xml
@@ -87,8 +87,8 @@
 		<url>https://github.com/fiji/blockmatching_/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Jenkins</system>
-		<url>http://jenkins.imagej.net/job/blockmatching/</url>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/fiji/blockmatching</url>
 	</ciManagement>
 
 	<properties>
