--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: java
 jdk: oraclejdk8
 branches:
-  only: master
+  only:
+  - master
+  - "/.*-[0-9]+\\..*/"
 install: true
 script: ".travis/build.sh"
-after_success: ".travis/notify.sh Travis-Success"
-after_failure: ".travis/notify.sh Travis-Failure"
 env:
   global:
   - secure: czAsDBYF19cTxluSNMxjRfDKot2ELzuQMDltMuPw5aIw7ndxc60EVLvlHGREaAB6T6m+HU8XcmgT+izXCcPviYFx+qOZuFn1kPrY5xwNFgmWURMprhNDdLFaCkE4ouKWVR6G6jDKx5c46e6qhF28OSxqiH6OODx+DuEhHElPIwI=
