--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>blockmatching_</artifactId>
-	<version>2.1.3-SNAPSHOT</version>
+	<version>2.1.3</version>
 
 	<name>Block Matching</name>
 	<description>Block Matching plugin for Fiji.</description>
@@ -76,7 +76,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/fiji/blockmatching</connection>
 		<developerConnection>scm:git:git@github.com:fiji/blockmatching</developerConnection>
-		<tag>HEAD</tag>
+		<tag>blockmatching_-2.1.3</tag>
 		<url>https://github.com/fiji/blockmatching</url>
 	</scm>
 	<issueManagement>
