Switch from Travis CI to GitHub Actions

--- a/pom.xml
+++ b/pom.xml
@@ -84,8 +84,8 @@
 		<url>https://github.com/fiji/blockmatching_/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Travis CI</system>
-		<url>https://travis-ci.org/fiji/blockmatching</url>
+		<system>GitHub Actions</system>
+		<url>https://github.com/fiji/blockmatching/actions</url>
 	</ciManagement>
 
 	<properties>
@@ -95,7 +95,7 @@
 		<license.projectName>Fiji distribution of ImageJ for the life sciences.</license.projectName>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
-		<releaseProfiles>deploy-to-scijava</releaseProfiles>
+		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 	</properties>
 
 	<repositories>
